# Chatbot-Steve

./: README.md  identity_management.py  init_datasets.py  intent_classifier.py  main.py  match_intent.py  name.py  name_dataset.joblib  notebook.py  process_text.py  pyproject.toml  question_answer.py  responses.json  responses.py  sm_dataset.joblib  small_talk.py  test_qa.py
datasets/: name_data.yml  sm_intents.csv  sm_responses.json
datasets/csv_files/name/: name_data.csv
datasets/csv_files/question_answer/: qa_data.csv
datasets/csv_files/small_talk/: sm_data.csv
datasets/csv_files/small_talk/intent_matching/: Small_talk_Intent.csv
datasets/name/: name.yml
datasets/small_talk/: Small_talk_Intent.csv  ai.yml  botprofile.yml  emotion.yml  food.yml  gossip.yml  greetings.yml  humor.yml  money.yml  movies.yml  psychology.yml  response.csv  sports.yml
datasets/stanford/: qa_data.json
joblibs/: intent_classifier.joblib  intent_dataset.joblib  name_dataset.joblib  qa_dataset.joblib  sm_dataset.joblib  tfidf_vectorizer.joblib
src/: main.py
src/features/: identity_management.py  intent_classifier.py  question_answer.py  small_talk.py
src/tests/: test_classifier.py  test_qa.py
src/utility/: init_datasets.py  process_text.py  similarity_matcher.py
